--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "deploy": "gh-pages -d build",
-    "predeploy":"npm run build"
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
